--- a/index-slider.html
+++ b/index-slider.html
@@ -24,6 +24,7 @@ VERSION : 1.1
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
         <link rel="stylesheet" type="text/css" href="css/owl.theme.css">
 	<link rel="stylesheet" type="text/css" href="css/magnific-popup.css">
+        <link rel ="stylesheet" type="text/css" href="library/vegas/vegas.min.css">
 	<!-- [ Boot STYLESHEET ]
         =========================================================================================================================-->
 	<link rel="stylesheet" type="text/css" href="library/bootstrap/css/bootstrap-theme.min.css">
@@ -94,7 +95,7 @@ VERSION : 1.1
            <div class="container">
                <div class="row">
                    <div class="main-heading-content col-md-12 col-sm-12 text-center">
-        <h1 class="main-heading-title">We are<span class="main-element themecolor" data-elements="Web Developers,Creative,Ambitious"></span></h1>
+        <h1 class="main-heading-title">We are Creative</h1>
         <p class="main-heading-text">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore,<br/>cum soluta nobis est eligendi optio cumque nihil impedit quo facilis</p>
         <div class="btn-bar">
           <a href="#" class="btn btn-custom theme_background_color">Ge Started</a>
@@ -643,8 +644,7 @@ VERSION : 1.1
         <script src="library/bootstrap/js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>	
 	<!-- [ PLUGIN SCRIPT ] -->
-        <script src="library/vegas/vegas.min.js"></script>
-	<script src="js/plugins.js"></script>
+      	<script src="js/plugins.js"></script>
         <!-- [ TYPING SCRIPT ] -->
          <script src="js/typed.js"></script>
          <!-- [ COUNT SCRIPT ] -->
@@ -656,9 +656,16 @@ VERSION : 1.1
         <script type="text/javascript" src="js/SmoothScroll.js"></script>
         
         <!-- [ COMMON SCRIPT ] -->
+          <script src="library/vegas/vegas.min.js"></script>
 	<script src="js/common.js"></script>
   
 </body>
-
+<script type="text/javascript">
+ $(document).ready(function()
+ {
+  fullscreenslider();
+ }
+ );
+</script>
 
 </html>
